@@ -14,6 +14,8 @@ update-manager (1:0.80) gutsy; urgency=low
     - fix crash with invalid utf-8 in polish locale (LP: #145351)
   * UpdateManager/UpdateManager.py:
     - remove debug output (LP: #145494)
+  * DistUpgrade/DistUpgradeControler.py:
+    - fix lock detection (LP: #145463)
   * UpdateManager/Common/utils.py:
     - show "0 KB" download size if there is nothing to download 
       (LP: #145308)
